# Reddit-Sentiment-Explorer

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  alembic.ini  app.db  docker-compose.yml  pyproject.toml  pyrightconfig.json  railway.api.json  railway.dashboard.json  railway.worker.json
.github/workflows/: ci.yml
scripts/: compare_all_providers.py  restart-dashboard.sh  run-integration-tests.sh  start-local-dev.sh  stop-local-dev.sh
src/reddit_sentiment/: composition.py  dashboard_runner.py  worker.py
src/reddit_sentiment/api/: __init__.py  main.py  (+1 more)
tests/: conftest.py  test_aggregation_service.py  test_aggregation_service_extra.py  test_aggregation_service_extra2.py  test_api_dependencies.py  test_arctic_shift_collector.py  test_cache_service.py  test_collection_persistence_batch.py  test_composition.py  test_dashboard_callbacks.py  test_dashboard_callbacks_extra.py  test_dashboard_charts.py  test_dashboard_components.py  test_dashboard_helpers.py  test_dashboard_helpers_extra.py  test_dashboard_layout.py  test_dashboard_translations.py  test_db_init.py  test_db_session.py  test_language_service.py  test_mock_sentiment.py  test_openai_provider.py  test_query_read_service.py  test_query_routes.py  test_query_service.py  test_query_service_extra2.py  test_run_query_pipeline.py  test_run_query_pipeline_success.py  test_search_service.py  test_sentiment_evaluation.py  test_sentiment_service.py  test_sentiment_service_extra.py  test_sentiment_service_extra2.py  test_subreddit_service.py  test_subreddit_service_extra.py  test_worker.py  test_worker_extra.py  test_worker_process_pending.py
tests/integration/: conftest.py  test_api_integration.py
thesis/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib  style.sty
thesis/chapters/: abstract.tex  appendix.tex  chapter1_introduction.tex  chapter2_literature_review.tex  chapter3_system_design.tex  chapter4_implementation.tex  chapter5_results.tex  chapter6_conclusions.tex
(+64 files in other folders)
